Scrollbar issue on 2.3

--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,10 @@ body[class*='-moodle23'] .mod_turnitintooltwo  .centered_cb_cell input {
     margin-bottom: 0;
 }
 
+#page-mod-turnitintooltwo-view .region-content {
+    padding: 0;
+}
+
 .turnitin_ula_text {
     padding-top: 15px;
     text-align: center;
